--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "test": "jest --coverage"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.3.0",
+    "@react-navigation/stack": "^5.3.2",
+    "@types/react-redux": "^7.1.8",
     "axios": "^0.19.2",
     "expo": "~37.0.3",
     "expo-updates": "~0.1.0",
@@ -21,11 +25,11 @@
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.7.0",
     "react-native-responsive-screen": "^1.4.1",
+    "react-native-safe-area-context": "^1.0.0",
     "react-native-screens": "~2.2.0",
     "react-native-unimodules": "~0.9.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
-    "react-navigation": "^4.3.9",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
