--- a/package.json
+++ b/package.json
@@ -5,38 +5,71 @@
     "ios": "react-native run-ios",
     "web": "expo start --web",
     "start": "react-native start",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "shim": "./node_modules/.bin/rn-nodeify --install crypto --hack"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.4.2",
     "@react-navigation/native": "^5.3.0",
     "@react-navigation/stack": "^5.3.2",
+    "@tradle/react-native-http": "^2.0.1",
+    "@types/crypto-js": "^3.1.45",
     "@types/react-redux": "^7.1.8",
+    "@types/redux-actions": "^2.6.1",
+    "assert": "^1.5.0",
     "axios": "^0.19.2",
+    "browserify-zlib": "^0.1.4",
+    "console-browserify": "^1.2.0",
+    "constants-browserify": "^1.0.0",
+    "crypto-js": "^4.0.0",
+    "dns.js": "^1.0.1",
+    "domain-browser": "^1.2.0",
+    "events": "^1.1.1",
     "expo": "~37.0.3",
     "expo-updates": "~0.1.0",
     "formik": "^2.1.4",
+    "https-browserify": "0.0.1",
     "moment": "^2.25.3",
+    "oauth-1.0a": "^2.2.6",
+    "path": "^0.12.7",
+    "path-browserify": "0.0.0",
+    "punycode": "^1.4.1",
+    "querystring-es3": "^0.2.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.5",
+    "react-native-crypto": "^2.2.0",
     "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^2.0.0",
+    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-level-fs": "^3.0.1",
+    "react-native-os": "^1.2.6",
+    "react-native-randombytes": "^3.5.3",
     "react-native-reanimated": "~1.7.0",
     "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "^1.0.0",
     "react-native-screens": "~2.2.0",
+    "react-native-tcp": "^3.3.2",
+    "react-native-udp": "^2.7.0",
     "react-native-unimodules": "~0.9.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
+    "readable-stream": "^3.6.0",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
+    "stream-browserify": "^1.0.0",
+    "string_decoder": "^0.10.31",
+    "timers-browserify": "^1.4.2",
+    "tty-browserify": "0.0.0",
     "type-to-reducer": "^1.2.0",
+    "url": "^0.10.3",
+    "vm-browserify": "0.0.4",
     "yup": "^0.28.5"
   },
   "devDependencies": {
@@ -45,6 +78,7 @@
     "@types/react-native": "~0.61.23",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "@typescript-eslint/parser": "^2.31.0",
+    "babel-plugin-rewrite-require": "^1.14.5",
     "babel-preset-expo": "~8.1.0",
     "eslint": "^7.0.0",
     "eslint-config-google": "^0.14.0",
@@ -52,10 +86,18 @@
     "jest-expo": "~37.0.0",
     "react-test-renderer": "^16.13.1",
     "redux-logger": "^3.0.6",
+    "rn-nodeify": "tradle/rn-nodeify",
     "typescript": "~3.8.3"
   },
   "jest": {
     "preset": "react-native"
   },
-  "private": true
+  "private": true,
+  "react-native": {
+    "crypto": "react-native-crypto",
+    "stream": "readable-stream"
+  },
+  "browser": {
+    "crypto": "react-native-crypto"
+  }
 }
