--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "main": "index.js",
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "cd ios && pod install && cd .. && react-native run-ios",
     "web": "expo start --web",
     "start": "react-native start",
     "test": "jest --coverage",
@@ -36,6 +36,7 @@
     "react-native-os": "^1.2.6",
     "react-native-randombytes": "^3.5.3",
     "react-native-reanimated": "~1.7.0",
+    "react-native-render-html": "^4.2.0",
     "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "^1.0.0",
     "react-native-screens": "~2.2.0",
@@ -44,6 +45,7 @@
     "react-native-unimodules": "~0.9.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
+    "react-native-webview": "^9.4.0",
     "react-redux": "^7.2.0",
     "readable-stream": "^1.0.33",
     "redux": "^4.0.5",
