--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-flash-message": "^0.1.15",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-image-zoom-viewer": "^3.0.0",
     "react-native-level-fs": "^3.0.1",
     "react-native-os": "^1.2.6",
     "react-native-randombytes": "^3.5.3",
