--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^5.3.0",
     "@react-navigation/stack": "^5.3.2",
     "@types/crypto-js": "^3.1.45",
+    "@types/react-native-snap-carousel": "^3.8.1",
     "@types/react-redux": "^7.1.8",
     "@types/redux-actions": "^2.6.1",
     "axios": "^0.19.2",
@@ -41,6 +42,7 @@
     "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "^1.0.0",
     "react-native-screens": "~2.2.0",
+    "react-native-snap-carousel": "^3.9.0",
     "react-native-tcp": "^3.3.2",
     "react-native-udp": "^2.7.0",
     "react-native-unimodules": "~0.9.0",
