--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,6 +3,7 @@ env:
   es6: true
 extends:
   - 'plugin:react/recommended'
+  - 'plugin:@typescript-eslint/recommended'
   - google
 globals:
   Atomics: readonly
@@ -16,4 +17,11 @@ parserOptions:
 plugins:
   - react
   - '@typescript-eslint'
-rules: {}
+rules: {
+  'require-jsdoc': off,
+  'no-invalid-this': off,
+  'comma-dangle': off,
+  'object-curly-spacing': ['error', 'always'],
+  '@typescript-eslint/ban-ts-ignore': off,
+  'react/display-name': off
+}
