--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -24,5 +24,6 @@ rules: {
   'object-curly-spacing': ['error', 'always'],
   '@typescript-eslint/ban-ts-ignore': off,
   'react/display-name': off,
-  'max-len': ['error', { 'code': 100 }]
+  'max-len': ['error', { 'code': 100 }],
+  'arrow-body-style': ['error', 'never']
 }
