--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "~37.0.3",
     "expo-updates": "~0.1.0",
     "formik": "^2.1.4",
+    "intl": "^1.2.5",
     "moment": "^2.25.3",
     "oauth-1.0a": "^2.2.6",
     "react": "~16.9.0",
