--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -25,5 +25,6 @@ rules: {
   '@typescript-eslint/ban-ts-ignore': off,
   'react/display-name': off,
   'max-len': ['error', { 'code': 100 }],
-  'arrow-body-style': ['warn', 'as-needed']
+  'arrow-body-style': ['warn', 'as-needed'],
+  '@typescript-eslint/camelcase': warn
 }
